--- a/Lancer/Views/Shared/_Layout.cshtml
+++ b/Lancer/Views/Shared/_Layout.cshtml
@@ -25,12 +25,12 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Lancer</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Software Engineer</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
+                <div id="navbarTogglerDemo01" class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <p class="nav navbar-text navbar-right">Hello, @User.Identity.Name!</p>
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
