Contact page created and linked. Style needed.

--- a/Lancer/Views/Home/Index.cshtml
+++ b/Lancer/Views/Home/Index.cshtml
@@ -2,107 +2,111 @@
     ViewData["Title"] = "Home Page";
 }
 
-    <div class="top-container">
-        <img class="top-cloud" src="images/cloud.png" alt="cloud">
-        <div class="title-text">
-            <h1><span class="badge badge-secondary">Hi</span> I'm Gabriel Vega</h1>
-            <h2>a <span class="pro">pro</span>grammer</h2>
-        </div>
-        <img class="bottom-cloud" src="images/cloud.png" alt="cloud">
-        <img class="mountain"
-             src="images/mountain.png"
-             alt="mountain-img"
-             srcset="images/mountain-480.png 480w,
+<div class="top-container">
+    <img class="top-cloud" src="images/cloud.png" alt="cloud">
+    <div class="title-text">
+        <h1><span class="badge badge-secondary">Hi</span> I'm Gabriel Vega</h1>
+        <h2>a <span class="pro">pro</span>grammer</h2>
+    </div>
+    <img class="bottom-cloud" src="images/cloud.png" alt="cloud">
+    <img class="mountain"
+         src="images/mountain.png"
+         alt="mountain-img"
+         srcset="images/mountain-480.png 480w,
                      images/mountain.png 960w,
                      images/mountain.png 1440w,
                       images/mountain.png 1920w"
-             sizes="(max-width:340px) 240px,
+         sizes="(max-width:340px) 240px,
                     (max-width:960px) 480px,
                     (max-width:1440px) 960px,
                     1920px">
-    </div>
+</div>
 
-   
-        <div class="profile">
-            <div class="profile-row">
-                <div class="card  border-info bg-light mb-3" style="max-width: 100rem;">
-                    <div class="row no-gutters">
-                        <div class="col-md-4">
-                            <img src="images/profile.png"
-                                 class="card-img"
-                                 alt="Gabriel-profile-img"
-                                 srcset="images/gabrielvega8691-480.png 480w,
+
+<div class="profile">
+    <div class="profile-row">
+        <div class="card  border-info bg-light mb-3" style="max-width: 100rem;">
+            <div class="row no-gutters">
+                <div class="col-md-4">
+                    <img src="images/profile.png"
+                         class="card-img"
+                         alt="Gabriel-profile-img"
+                         srcset="images/gabrielvega8691-480.png 480w,
                                         images/gabrielvega8691-960.png 960w,
                                         images/gabrielvega8691-1440.png 1440w,
                                         images/gabrielvega8691.png 1920w"
-                                 sizes="(max-width:480px) 240px,
+                         sizes="(max-width:480px) 240px,
                                          (max-width:960px) 480px,
                                         (max-width:1440px) 960px,
                                          1920px">
-                        </div>
-                        <div class="col-md-8">
-                            <div class="card-body">
-                                <h5 class="card-title">Introduction</h5>
-                                <p class="card-text">
-                                    I am an <em>Educator</em> & <em>Software Developer</em>. I am <em>very</em> proud of my <i>Computer Science</i> <em>Masters</em>
-                                    with an <em>emphasis</em> on software engineering. I'm a <strong>middle school</strong> and <strong>high school</strong> robotics & math teacher with over <em>ten years</em> of experience.
-                                    I absolutely <em>love</em> my experience working in <i>Information Technology</i>. I <em>love❤</em> my family. My family includes my <strong>wife</strong> and my <strong>9-year-old daughter.</strong>
-                                </p>
-                                <footer class="blockquote-footer">
-                                    <small class="text-muted">
-                                        <q lang="es-mx">Hola, Se Habla Espanol</q> <cite title="Source Title">Hello, I speak spanish</cite>
-                                    </small>
-                                </footer>
-                            </div>
-                        </div>
+                </div>
+                <div class="col-md-8">
+                    <div class="card-body">
+                        <h5 class="card-title">Introduction</h5>
+                        <p class="card-text">
+                            I am an <em>Educator</em> & <em>Software Developer</em>. I am <em>very</em> proud of my <i>Computer Science</i> <em>Masters</em>
+                            with an <em>emphasis</em> on software engineering. I'm a <strong>middle school</strong> and <strong>high school</strong> robotics & math teacher with over <em>ten years</em> of experience.
+                            I absolutely <em>love</em> my experience working in <i>Information Technology</i>. I <em>love❤</em> my family. My family includes my <strong>wife</strong> and my <strong>9-year-old daughter.</strong>
+                        </p>
+                        <footer class="blockquote-footer">
+                            <small class="text-muted">
+                                <q lang="es-mx">Hola, Se Habla Espanol</q> <cite title="Source Title">Hello, I speak spanish</cite>
+                            </small>
+                        </footer>
                     </div>
                 </div>
             </div>
         </div>
-        <hr>
+    </div>
+</div>
+<hr>
 
-        <div class="row row-cols-1 row-cols-md-2">
-            <div class="col mb-4">
-                <div class="card h-100">
-                    <img src="https://www.9to5animations.com/wp-content/uploads/2016/03/how-to-coding-gif.gif" class="card-img-top" alt="code-img">
-                    <div class="card-body">
-                        <h5 class="card-title">Design & Development</h5>
-                        <p class="card-text">
-                            I started learning to write <code>C++ code</code> when I was in <em>High School</em>. Over time, I have gained a wealth of
-                            <i>education</i> & <i>experience</i> designing and developing websites and mobile applications.
-                        </p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col mb-4">
-                <div class="card h-100">
-                    <img src="https://media.giphy.com/media/NWlBEcDW5evFS/giphy.gif" class="card-img-top" alt="soccer-img">
-                    <div class="card-body">
-                        <h5 class="card-title">Soccer Player & Coach</h5>
-                        <p class="card-text">
-                            I <em>enjoy</em> spending time with my <i>family</i>. I also enjoy having fun with <strong>robotics</strong> and <strong>playing video games</strong>. My favorite activity is <strong>soccer</strong>.
-                            I have coached my 9-year-old daughter for <em>three</em> seasons already.
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <hr>
-
-        <div class="card">
-            <div class="card-header">
-                Reach Out
-            </div>
+<div class="row row-cols-1 row-cols-md-2">
+    <div class="col mb-4">
+        <div class="card h-100">
+            <img src="https://www.9to5animations.com/wp-content/uploads/2016/03/how-to-coding-gif.gif" class="card-img-top" alt="code-img">
             <div class="card-body">
-                <h5 class="card-title">Get in touch</h5>
+                <h5 class="card-title">Design & Development</h5>
                 <p class="card-text">
-                    Do you need a <strong>freelance developer</strong> or <strong>software engineer</strong>?
-                    Are you looking for a <em>virtual tutor?</em> I can help! I have <em>twelve</em> years of K-12 public school teaching experience.
-                    I am <em>highly qualified</em> to teach <strong>Math, Computer Science, Industrial & Tech, Computer Applications, and Social Studies.</strong>
+                    I started learning to write <code>C++ code</code> when I was in <em>High School</em>. Over time, I have gained a wealth of
+                    <i>education</i> & <i>experience</i> designing and developing websites and mobile applications.
                 </p>
-                <a href="mailto:gvega001@gmail.com" class="btn btn-outline-light">Email Me</a>
             </div>
         </div>
+    </div>
+
+    <div class="col mb-4">
+        <div class="card h-100">
+            <img src="https://media.giphy.com/media/NWlBEcDW5evFS/giphy.gif" class="card-img-top" alt="soccer-img">
+            <div class="card-body">
+                <h5 class="card-title">Soccer Player & Coach</h5>
+                <p class="card-text">
+                    I <em>enjoy</em> spending time with my <i>family</i>. I also enjoy having fun with <strong>robotics</strong> and <strong>playing video games</strong>. My favorite activity is <strong>soccer</strong>.
+                    I have coached my 9-year-old daughter for <em>three</em> seasons already.
+                </p>
+            </div>
+        </div>
+    </div>
+</div>
+
+<hr>
+
+<div class="card">
+    <div class="card-header">
+        Reach Out
+    </div>
+    <div class="card-body">
+        <h5 class="card-title">Get in touch</h5>
+        <p class="card-text">
+            Do you need a <strong>freelance developer</strong> or <strong>software engineer</strong>?
+            Are you looking for a <em>virtual tutor?</em> I can help! I have <em>twelve</em> years of K-12 public school teaching experience.
+            I am <em>highly qualified</em> to teach <strong>Math, Computer Science, Industrial & Tech, Computer Applications, and Social Studies.</strong>
+        </p>
+        <a href="mailto:gvega001@gmail.com" class="btn btn-outline-light">Email Me</a>
+    </div>
+</div>
+<audio controls loop>
+    <source src="happy.mp3"
+            type="audio/mp3">
+</audio>
 
