--- a/Lancer/Views/Shared/_Layout.cshtml
+++ b/Lancer/Views/Shared/_Layout.cshtml
@@ -37,6 +37,9 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Contact">Contact</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                     </ul>
@@ -60,7 +63,10 @@
                     <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Links</a>
                     <div class="dropdown-menu">
                         <a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Contact">Contact</a>
+                        <div class="dropdown-divider">
+
+                        </div>
                         <a class="dropdown-item" href="https://www.linkedin.com/in/gabriel-vega-8882291aa/">LinkedIn</a>
                     </div>
                 </li>
@@ -73,10 +79,7 @@
                 </li>
             </ul>
             <p class="copyright">Software Engineer <span class="badge badge-secondary">Full Stack Developer</span></p>
-            <audio controls loop>
-                <source src="happy.mp3"
-                        type="audio/mp3">
-            </audio>
+           
         </div>
     </section>
 
