Contact form has data binding. But no lead is created. Style is back

--- a/Lancer/Views/Home/Contact.cshtml
+++ b/Lancer/Views/Home/Contact.cshtml
@@ -1,4 +1,4 @@
-﻿@model ContactViewModel
+﻿@model LeadViewModel
 @{
     ViewData["Title"] = "Contact";
     Layout = "_Layout";
@@ -39,7 +39,7 @@
                     @Html.EditorFor(x => x.message)
                 </p>
             }
-            <button type="submit">Submi</button>
+            <button type="submit">Submit</button>
         </fieldset>
     </div>
 </section>
