12 warnings that are gone

--- a/Lancer/Views/Home/Contact.cshtml
+++ b/Lancer/Views/Home/Contact.cshtml
@@ -23,20 +23,20 @@
             @using (Html.BeginForm())
             {
                 <p>
-                    @Html.LabelFor(x => x.firstName)
-                    @Html.EditorFor(x => x.firstName)
+                    @Html.LabelFor(x => x.FirstName)
+                    @Html.EditorFor(x => x.FirstName)
                 </p>
                 <p>
-                    @Html.LabelFor(x => x.lastName)
-                    @Html.EditorFor(x => x.lastName)
+                    @Html.LabelFor(x => x.LastName)
+                    @Html.EditorFor(x => x.LastName)
                 </p>
                 <p>
-                    @Html.LabelFor(x => x.email)
-                    @Html.EditorFor(x => x.email)
+                    @Html.LabelFor(x => x.Email)
+                    @Html.EditorFor(x => x.Email)
                 </p>
                 <p>
-                    @Html.LabelFor(x => x.message)
-                    @Html.EditorFor(x => x.message)
+                    @Html.LabelFor(x => x.Message)
+                    @Html.EditorFor(x => x.Message)
                 </p>
             }
             <button type="submit">Submit</button>
