--- a/Lancer/Views/Shared/_Layout.cshtml
+++ b/Lancer/Views/Shared/_Layout.cshtml
@@ -35,6 +35,12 @@
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                        </li> 
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Resume">Resume</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Services">Services</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Contact">Contact</a>
@@ -62,8 +68,11 @@
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Links</a>
                     <div class="dropdown-menu">
-                        <a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         <a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Contact">Contact</a>
+                        <a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Resume">Resume</a>
+                        <a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Services">Services</a>
+                        <a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+
                         <div class="dropdown-divider">
 
                         </div>
