--- a/Lancer/wwwroot/css/styles.css
+++ b/Lancer/wwwroot/css/styles.css
@@ -11,12 +11,11 @@ body
   font-family: 'Merriweather', serif;
 }
 
-h1
-{
-  color: #196862;
-  font-size: 5.625rem;
-  margin: 50px auto 0 auto;
-  font-family: 'Sacramento', cursive;
+h1 {
+    color: #196862;
+    font-size: 5.625rem;
+    margin: 150px auto 0 auto;
+    font-family: 'Sacramento', cursive;
 }
 
 h2
@@ -169,7 +168,6 @@ section
   background: #11cdd4;
   background-image: -webkit-linear-gradient(top, #11cdd4, #11999e);
   background-image: -moz-linear-gradient(top, #11cdd4, #11999e);
-  background-image: -ms-linear-gradient(top, #11cdd4, #11999e);
   background-image: -o-linear-gradient(top, #11cdd4, #11999e);
   background-image: linear-gradient(to bottom, #11cdd4, #11999e);
   -webkit-border-radius: 8em;
@@ -187,7 +185,6 @@ section
   background: #30e3cb;
   background-image: -webkit-linear-gradient(top, #30e3cb, #2bc4ad);
   background-image: -moz-linear-gradient(top, #30e3cb, #2bc4ad);
-  background-image: -ms-linear-gradient(top, #30e3cb, #2bc4ad);
   background-image: -o-linear-gradient(top, #30e3cb, #2bc4ad);
   background-image: linear-gradient(to bottom, #30e3cb, #2bc4ad);
   text-decoration: none;
