--- a/Lancer/Views/Home/Contact.cshtml
+++ b/Lancer/Views/Home/Contact.cshtml
@@ -22,21 +22,26 @@
         <fieldset>
             @using (Html.BeginForm())
             {
+                @Html.ValidationSummary()
                 <p>
                     @Html.LabelFor(x => x.FirstName)
                     @Html.EditorFor(x => x.FirstName)
+                    @Html.ValidationMessageFor(x=> x.FirstName)
                 </p>
                 <p>
                     @Html.LabelFor(x => x.LastName)
                     @Html.EditorFor(x => x.LastName)
+                    @Html.ValidationMessageFor(x=> x.LastName)
                 </p>
                 <p>
                     @Html.LabelFor(x => x.Email)
                     @Html.EditorFor(x => x.Email)
+                    @Html.ValidationMessageFor(x=> x.Email)
                 </p>
                 <p>
                     @Html.LabelFor(x => x.Message)
                     @Html.EditorFor(x => x.Message)
+                    @Html.ValidationMessageFor(x=> x.Message)
                 </p>
                 <button type="submit">Submit</button>
             }
