--- a/Lancer/Views/Home/resume.cshtml
+++ b/Lancer/Views/Home/resume.cshtml
@@ -138,4 +138,4 @@
 </section>
 
 <hr>
-<iframe height="580" src="https://www.youtube-nocookie.com/embed/w2mdZK7_nwk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width ="720"height="580" src="https://www.youtube-nocookie.com/embed/w2mdZK7_nwk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
