Create Lancer Button

--- a/Lancer/Views/Home/Freelancer.cshtml
+++ b/Lancer/Views/Home/Freelancer.cshtml
@@ -65,7 +65,7 @@
                     @Html.ValidationMessageFor(x=> x.ZipCode)
                 </p>
       
-                <button type="submit">Submit</button>
+                <button type="submit">Create Lancer</button>
             }
 
         </fieldset>
