--- a/Lancer/Views/Shared/_Layout.cshtml
+++ b/Lancer/Views/Shared/_Layout.cshtml
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/styles.css">
-    <title>@ViewData["Title"]-Home</title>
+    <title>@ViewData["Title"]-Freelance</title>
 </head>
 <body>
     <header>
