--- a/Lancer/Views/Home/Contact.cshtml
+++ b/Lancer/Views/Home/Contact.cshtml
@@ -18,35 +18,29 @@
 
 
 <section id="body">
-    <div class="fluid-container">
-        <fieldset>
-            @using (Html.BeginForm())
-            {
-                @Html.ValidationSummary()
-                <p>
-                    @Html.LabelFor(x => x.FirstName)
-                    @Html.EditorFor(x => x.FirstName)
-                    @Html.ValidationMessageFor(x=> x.FirstName)
-                </p>
-                <p>
-                    @Html.LabelFor(x => x.LastName)
-                    @Html.EditorFor(x => x.LastName)
-                    @Html.ValidationMessageFor(x=> x.LastName)
-                </p>
-                <p>
-                    @Html.LabelFor(x => x.Email)
-                    @Html.EditorFor(x => x.Email)
-                    @Html.ValidationMessageFor(x=> x.Email)
-                </p>
-                <p>
-                    @Html.LabelFor(x => x.Message)
-                    @Html.EditorFor(x => x.Message)
-                    @Html.ValidationMessageFor(x=> x.Message)
-                </p>
-                <button type="submit">Submit</button>
-            }
-
-        </fieldset>
-    </div>
-</section>
+   
+        <form method="post" class="form-horizontal">
+            <div class="form-group" asp-validation-summary="All">
+                <label asp-for="FirstName" class="col-md-2 control-label">First Name</label>
+                <div class="col-md-10">
+                    <input asp-for="FirstName" class="form-control" />
+                </div>
+                <label asp-for="LastName" class="col-md-2 control-label">Last Name</label>
+                <div class="col-md-10">
+                    <input asp-for="LastName" class="form-control" />
+                </div>
+                <label asp-for="Email" class="col-md-2 control-label"></label>
+                <div class="col-md-10">
+                    <input asp-for="Email" class="form-control" />
+                </div>
+                <label asp-for="Message" class="col-md-2 control-label"></label>
+                <div class="col-md-10">
+                    <input asp-for="Message" asp-area="3" class="form-control" />
+                </div>
+                <div class="col-md-offset-2 col-md-10">
+                    <button type="submit" class="btn btn btn-primary">Create</button>
+                </div>
+            </div>
+        </form>
+ </section>
 <hr>
