--- a/Lancer/Views/Home/Freelancer.cshtml
+++ b/Lancer/Views/Home/Freelancer.cshtml
@@ -17,8 +17,11 @@
     </div>
 
 </div>
+<div class="col-md-offset-2 col-md-10">
+        <div asp-validation-summary="All" class="text-danger"></div>
+    </div> 
 <form method="post" class="form-horizontal">
-    <div class="form-group" asp-validation-summary="All">
+    <div class="form-group">
         <label asp-for="FirstName" class="col-md-2 control-label">First Name</label>
         <div class="col-md-10">
             <input asp-for="FirstName" class="form-control" />
