--- a/Lancer/Views/Home/Contact.cshtml
+++ b/Lancer/Views/Home/Contact.cshtml
@@ -1,56 +1,57 @@
-﻿@model Lancer.Models.LeadViewModel
+﻿
+@model Lancer.Models.LeadViewModel
 @{
     ViewData["Title"] = "Contact";
     Layout = "_Layout";
 }
 
-   
 
 
-    <fieldset class="Contact">
 
-        <div class="top-container">
-            <div class="fluid-container">
-                <div class="jumbotron jumbotron-fluid">
-                    <div class="container">
-                        <h1 class="display-4">Contact Form</h1>
-                        <p class="lead">Have a question or want more information?</p>
-                    </div>
+<fieldset class="Contact">
+
+    <div class="top-container">
+        <div class="fluid-container">
+            <div class="jumbotron jumbotron-fluid">
+                <div class="container">
+                    <h1 class="display-4">Contact Form</h1>
+                    <p class="lead">Have a question or want more information?</p>
                 </div>
             </div>
-
         </div>
 
+    </div>
+
+    <br />
+    <div asp-validation-summary="All" class="text-danger"></div>
+    <form role="form" asp-action="Contact">
+
+        <div class="form-group">
+            <label asp-for="FirstName" class="col-md-2 control-label">First Name</label>
+            <input asp-for="FirstName" class="form-control" />
+            <span asp-validation-for="FirstName" class="field-validation-error"></span>
+        </div>
+        <div class="form-group">
+            <label asp-for="LastName" class="col-md-2 control-label">Last Name</label>
+            <input asp-for="LastName" class="form-control" />
+            <span asp-validation-for="LastName" class="field-validation-error"></span>
+        </div>
+        <div class="form-group">
+            <label asp-for="Email" class="col-md-2 control-label"></label>
+            <input asp-for="Email" class="form-control" />
+            <span asp-validation-for="Email" class="field-validation-error"></span>
+        </div>
+        <div class="form-group">
+            <label asp-for="Message" class="col-md-2 control-label"></label>
+            <input asp-for="Message" asp-area="3" class="form-control" />
+            <span asp-validation-for="Message" class="field-validation-error"></span>
+        </div>
         <br />
-        <div asp-validation-summary="All" class="text-danger"></div>
-        <form role="form" asp-action="Contact">
+        <div>
+            <label>&nbsp;</label>
+            <button type="submit" class="btn btn btn-primary">Create</button>
+        </div>
 
-            <div class="form-group">
-                <label asp-for="FirstName" class="col-md-2 control-label">First Name</label>
-                <input asp-for="FirstName" class="form-control" />
-                <span asp-validation-for="FirstName" class="field-validation-error"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="LastName" class="col-md-2 control-label">Last Name</label>
-                <input asp-for="LastName" class="form-control" />
-                <span asp-validation-for="LastName" class="field-validation-error"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Email" class="col-md-2 control-label"></label>
-                <input asp-for="Email" class="form-control" />
-                <span asp-validation-for="Email" class="field-validation-error"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Message" class="col-md-2 control-label"></label>
-                <input asp-for="Message" asp-area="3" class="form-control" />
-                <span asp-validation-for="Message" class="field-validation-error"></span>
-            </div>
-            <br />
-            <div>
-                <label>&nbsp;</label>
-                <button type="submit" class="btn btn btn-primary">Create</button>
-            </div>
-
-        </form>
-    </fieldset>
-        <hr>
+    </form>
+</fieldset>
+<hr>
