--- a/Lancer/Views/Home/Bid.cshtml
+++ b/Lancer/Views/Home/Bid.cshtml
@@ -1,17 +1,17 @@
-﻿@model Lancer.Models.LeadViewModel
+﻿@model Lancer.Models.BidViewModel
 
 @{
-    ViewData["Title"] = "Contact";
+    ViewData["Title"] = "Bid";
     Layout = "_Layout";
 }
-    <fieldset class="Contact">
+    <fieldset class="Bid">
 
         <div class="top-container">
             <div class="fluid-container">
                 <div class="jumbotron jumbotron-fluid">
                     <div class="container">
-                        <h1 class="display-4">Contact Form</h1>
-                        <p class="lead">Contact Me!</p>
+                        <h1 class="display-4">Bid</h1>
+                        <p class="lead">Freelance Bid</p>
                     </div>
                 </div>
             </div>
@@ -26,21 +26,25 @@
                         <input asp-for="Id" class="form-control" />
                         <span asp-validation-for="Id" class="text-danger"></span>
                     </div>
-             
-                    <div class="form-group">
-                        <label asp-for="FirstName" class="control-label"></label>
-                        <input asp-for="FirstName" class="form-control" />
-                        <span asp-validation-for="FirstName" class="text-danger"></span>
+                    <div class="form-group form-check">
+                        <label class="form-check-label">
+                            <input class="form-check-input" asp-for="ShowRequestId" /> @Html.DisplayNameFor(model => model.ShowRequestId)
+                        </label>
                     </div>
                     <div class="form-group">
-                        <label asp-for="LastName" class="control-label"></label>
-                        <input asp-for="LastName" class="form-control" />
-                        <span asp-validation-for="LastName" class="text-danger"></span>
+                        <label asp-for="Amount" class="control-label"></label>
+                        <input asp-for="Amount" class="form-control" />
+                        <span asp-validation-for="Amount" class="text-danger"></span>
                     </div>
                     <div class="form-group">
-                        <label asp-for="Email" class="control-label"></label>
-                        <input asp-for="Email" class="form-control" />
-                        <span asp-validation-for="Email" class="text-danger"></span>
+                        <label asp-for="DaysToDelivery" class="control-label"></label>
+                        <input asp-for="DaysToDelivery" class="form-control" />
+                        <span asp-validation-for="DaysToDelivery" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="Descriptions" class="control-label"></label>
+                        <input asp-for="Descriptions" class="form-control" />
+                        <span asp-validation-for="Descriptions" class="text-danger"></span>
                     </div>
                     <div class="form-group">
                         <label asp-for="Message" class="control-label"></label>
@@ -48,10 +52,10 @@
                         <span asp-validation-for="Message" class="text-danger"></span>
                     </div>
                     <div class="form-group">
-                        <input type="submit" value="Contact" class="btn btn-primary" />
+                        <input type="submit" value="Bid" class="btn btn-primary" />
                     </div>
                 </form>
-    
+
         <div>
             <a asp-action="Index">Back to List</a>
         </div>
