--- a/Lancer/Views/Home/Freelancer.cshtml
+++ b/Lancer/Views/Home/Freelancer.cshtml
@@ -4,59 +4,74 @@
     ViewData["Title"] = "Freelancer";
     Layout = "_Layout";
 }
+<fieldset class="Freelancer">
 
-<div class="top-container">
-    <div class="fluid-container">
-        <div class="jumbotron jumbotron-fluid">
-            <div class="container">
-                <h1 class="display-4">Create Freelancer</h1>
-                <p class="lead">Pro Freelancer</p>
+    <div class="top-container">
+        <div class="fluid-container">
+            <div class="jumbotron jumbotron-fluid">
+                <div class="container">
+                    <h1 class="display-4">Create Freelancer</h1>
+                    <p class="lead">Pro Freelancer</p>
 
+                </div>
             </div>
         </div>
     </div>
+    <form asp-action="View">
+        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        <div class="form-group">
+            <label asp-for="Id" class="control-label"></label>
+            <input asp-for="Id" class="form-control" />
+            <span asp-validation-for="Id" class="text-danger"></span>
+        </div>
 
-</div>
-<div class="col-md-offset-2 col-md-10">
-        <div asp-validation-summary="All" class="text-danger"></div>
-    </div> 
-<form method="post" class="form-horizontal">
-    <div class="form-group">
-        <label asp-for="FirstName" class="col-md-2 control-label">First Name</label>
-        <div class="col-md-10">
+        <div class="form-group">
+            <label asp-for="FirstName" class="control-label"></label>
             <input asp-for="FirstName" class="form-control" />
+            <span asp-validation-for="FirstName" class="text-danger"></span>
         </div>
-        <label asp-for="LastName" class="col-md-2 control-label">Last Name</label>
-        <div class="col-md-10">
+        <div class="form-group">
+            <label asp-for="LastName" class="control-label"></label>
             <input asp-for="LastName" class="form-control" />
+            <span asp-validation-for="LastName" class="text-danger"></span>
         </div>
-        <label asp-for="Email" class="col-md-2 control-label"></label>
-        <div class="col-md-10">
-            <input asp-for="Email" class="form-control" />
+        <div class="form-group">
+            <label asp-for="Email" class="control-label"></label>
+            <input  asp-for="Email" class="form-control" />
+            <span asp-validation-for="Email" class="text-danger"></span>
         </div>
-        <label asp-for="Phone" class="col-md-2 control-label"></label>
-        <div class="col-md-10">
-            <input asp-for="Phone" asp-area="3" class="form-control" />
+        <div class="form-group">
+            <label asp-for="Phone" class="control-label"></label>
+            <input asp-for="Phone" class="form-control" />
+            <span asp-validation-for="Phone" class="text-danger"></span>
         </div>
-        <label asp-for="Address" class="col-md-2 control-label"></label>
-        <div class="col-md-10">
-            <input asp-for="Address" asp-area="3" class="form-control" />
+        <div class="form-group">
+            <label asp-for="Address" class="control-label"></label>
+            <input asp-for="Address" class="form-control" />
+            <span asp-validation-for="Address" class="text-danger"></span>
         </div>
-        <label asp-for="State" class="col-md-2 control-label"></label>
-        <div class="col-md-10">
-            <input asp-for="State" asp-area="3" class="form-control" />
+        <div class="form-group">
+            <label asp-for="City" class="control-label"></label>
+            <input asp-for="City" class="form-control" />
+            <span asp-validation-for="State" class="text-danger"></span>
         </div>
-        <label asp-for="City" class="col-md-2 control-label"></label>
-        <div class="col-md-10">
-            <input asp-for="City" asp-area="3" class="form-control" />
+        <div class="form-group">
+            <label asp-for="ZipCode" class="control-label"></label>
+            <input asp-for="ZipCode" class="form-control" />
+            <span asp-validation-for="ZipCode" class="text-danger"></span>
         </div>
-        <label asp-for="ZipCode" class="col-md-2 control-label"></label>
-        <div class="col-md-10">
-            <input asp-for="ZipCode" asp-area="3" class="form-control" />
+       
+        <div class="form-group">
+            <input type="submit" value="Create" class="btn btn-primary" />
         </div>
-        <div class="col-md-offset-2 col-md-10">
-            <button type="submit" class="btn btn btn-primary">Create</button>
-        </div>
+    </form>
+
+    <div>
+        <a asp-action="Index">Back to List</a>
     </div>
-</form>
+
+    @section Scripts {
+        @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    }
+</fieldset>
 <hr>
