--- a/Lancer/Views/Home/Register.cshtml
+++ b/Lancer/Views/Home/Register.cshtml
@@ -4,37 +4,56 @@
     Layout = "_Layout";
 }
 
-<fieldset class="account">
+<fieldset class="Register">
 
-    <h1>New User Registration</h1>
+    <div class="top-container">
+        <div class="fluid-container">
+            <div class="jumbotron jumbotron-fluid">
+                <div class="container">
+                    <h1 class="display-4">Register</h1>
+                    <p class="lead">User Registration</p>
+                </div>
+            </div>
+        </div>
+
+    </div>
+    <form asp-action="View">
+        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        <div class="form-group">
+            <label asp-for="EmailAddress" class="control-label"></label>
+            <input type="email" asp-for="EmailAddress" class="form-control" />
+            <span asp-validation-for="EmailAddress" class="text-danger"></span>
+        </div>
+
+        <div class="form-group">
+            <label asp-for="Password" class="control-label"></label>
+            <input type="password" asp-for="Password" class="form-control" />
+            <span asp-validation-for="Password" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+            <label asp-for="ConfirmPassword" class="control-label"></label>
+            <input type="button" asp-for="ConfirmPassword" class="form-control" />
+            <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
+        </div>
+
+        <div class="form-group">
+            <input type="submit" value="Create" class="btn btn-primary" />
+        </div>
+    </form>
 
     <br />
 
-    <form role="form" asp-action="Register">
-        <div asp-validation-summary="All" class="input-validation-error"></div>
+    <div class="form-group">
+        <label>Not Registered?</label>
+        <a asp-action="Register">Create a new account</a>
+    </div>
+    <div>
+        <a asp-action="Index">Back to List</a>
+    </div>
 
-        <div class="form-group">
-            <label asp-for="EmailAddress"></label>
-            <input type="email" asp-for="EmailAddress" class="form-control" />
-            <span asp-validation-for="EmailAddress" class="field-validation-error"></span>
-        </div>
-
-        <div class="form-group">
-            <label asp-for="Password"></label>
-            <input type="password" asp-for="Password" class="form-control" />
-            <span asp-validation-for="Password" class="field-validation-error"></span>
-        </div>
-
-        <div class="form-group">
-            <label asp-for="ConfirmPassword"></label>
-            <input type="password" asp-for="ConfirmPassword" class="form-control" />
-            <span asp-validation-for="ConfirmPassword" class="field-validation-error"></span>
-        </div>
-        <br />
-        <div>
-            <label>&nbsp;</label>
-            <button type="submit" class="btn btn-primary">Create new user</button>
-        </div>
-
-    </form>
+    @section Scripts {
+        @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    }
 </fieldset>
+
+
