--- a/Lancer/Views/Home/Business.cshtml
+++ b/Lancer/Views/Home/Business.cshtml
@@ -4,20 +4,20 @@
     ViewData["Title"] = "Business";
     Layout = "_Layout";
 }
-<fieldset class="Business">
+    <fieldset class="Business">
 
-    <div class="top-container">
-        <div class="fluid-container">
-            <div class="jumbotron jumbotron-fluid">
-                <div class="container">
-                    <h1 class="display-4">Create Business</h1>
-                    <p class="lead">All Businesses Welcomed!</p>
+        <div class="top-container">
+            <div class="fluid-container">
+                <div class="jumbotron jumbotron-fluid">
+                    <div class="container">
+                        <h1 class="display-4">Create Business</h1>
+                        <p class="lead">All Businesses Welcomed!</p>
 
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-    <form asp-action="View">
+        <form asp-action="Create" asp-controller="Business">
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
         <div class="form-group">
             <label asp-for="Id" class="control-label"></label>
@@ -64,14 +64,14 @@
         <div class="form-group">
             <input type="submit" value="Create" class="btn btn-primary" />
         </div>
-    </form>
+        </form>
 
-    <div>
-        <a asp-action="Index">Back to List</a>
-    </div>
+        <div>
+            <a asp-action="Index">Back to List</a>
+        </div>
 
-    @section Scripts {
-        @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-    }
-</fieldset>
+        @section Scripts {
+            @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+        }
+    </fieldset>
 <hr>
