--- a/Lancer/Views/Home/Register.cshtml
+++ b/Lancer/Views/Home/Register.cshtml
@@ -32,7 +32,7 @@
         </div>
         <div class="form-group">
             <label asp-for="ConfirmPassword" class="control-label"></label>
-            <input type="button" asp-for="ConfirmPassword" class="form-control" />
+            <input  asp-for="ConfirmPassword" class="form-control" />
             <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
         </div>
 
