--- a/Lancer/Views/Home/Bid.cshtml
+++ b/Lancer/Views/Home/Bid.cshtml
@@ -19,7 +19,7 @@
         </div>
 
 
-                <form asp-action="Create" asp-controller="Bid">
+                <form asp-action="Bid" asp-controller="Home">
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                     <div class="form-group">
                         <label asp-for="Id" class="control-label"></label>
