--- a/Lancer/Views/Home/LeadContact.cshtml
+++ b/Lancer/Views/Home/LeadContact.cshtml
@@ -17,7 +17,7 @@
             </div>
         </div>
     </div>
-    <form asp-action="View">
+    <form asp-action="LeadContact" asp-controller="Home">
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
         <div class="form-group">
             <label asp-for="Id" class="control-label"></label>
