--- a/Lancer/Views/Home/Register.cshtml
+++ b/Lancer/Views/Home/Register.cshtml
@@ -4,56 +4,57 @@
     Layout = "_Layout";
 }
 
-<fieldset class="Register">
+    <fieldset class="Register">
 
-    <div class="top-container">
-        <div class="fluid-container">
-            <div class="jumbotron jumbotron-fluid">
-                <div class="container">
-                    <h1 class="display-4">Register</h1>
-                    <p class="lead">User Registration</p>
+        <div class="top-container">
+            <div class="fluid-container">
+                <div class="jumbotron jumbotron-fluid">
+                    <div class="container">
+                        <h1 class="display-4">Register</h1>
+                        <p class="lead">User Registration</p>
+                    </div>
                 </div>
             </div>
+
         </div>
 
-    </div>
-    <form asp-action="View">
-        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        <form asp-action="Register" asp-controller="Home">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div class="form-group">
+                <label asp-for="EmailAddress" class="control-label"></label>
+                <input type="email" asp-for="EmailAddress" class="form-control" />
+                <span asp-validation-for="EmailAddress" class="text-danger"></span>
+            </div>
+
+            <div class="form-group">
+                <label asp-for="Password" class="control-label"></label>
+                <input type="password" asp-for="Password" class="form-control" />
+                <span asp-validation-for="Password" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="ConfirmPassword" class="control-label"></label>
+                <input asp-for="ConfirmPassword" class="form-control" />
+                <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
+            </div>
+
+            <div class="form-group">
+                <input type="submit" value="Create" class="btn btn-primary" />
+            </div>
+        </form>
+
+        <br />
+
         <div class="form-group">
-            <label asp-for="EmailAddress" class="control-label"></label>
-            <input type="email" asp-for="EmailAddress" class="form-control" />
-            <span asp-validation-for="EmailAddress" class="text-danger"></span>
+            <label>Not Registered?</label>
+            <a asp-action="Register">Create a new account</a>
+        </div>
+        <div>
+            <a asp-action="Index">Back to List</a>
         </div>
 
-        <div class="form-group">
-            <label asp-for="Password" class="control-label"></label>
-            <input type="password" asp-for="Password" class="form-control" />
-            <span asp-validation-for="Password" class="text-danger"></span>
-        </div>
-        <div class="form-group">
-            <label asp-for="ConfirmPassword" class="control-label"></label>
-            <input  asp-for="ConfirmPassword" class="form-control" />
-            <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
-        </div>
-
-        <div class="form-group">
-            <input type="submit" value="Create" class="btn btn-primary" />
-        </div>
-    </form>
-
-    <br />
-
-    <div class="form-group">
-        <label>Not Registered?</label>
-        <a asp-action="Register">Create a new account</a>
-    </div>
-    <div>
-        <a asp-action="Index">Back to List</a>
-    </div>
-
-    @section Scripts {
-        @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-    }
-</fieldset>
+        @section Scripts {
+            @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+        }
+    </fieldset>
 
 
