Revert "forms good. Sql connection and tables not."
This reverts commit 353d6fa3af8367eca674d44a1c9f6a06941cfdd4.

--- a/Lancer/Views/Home/Bid.cshtml
+++ b/Lancer/Views/Home/Bid.cshtml
@@ -19,7 +19,7 @@
         </div>
 
 
-                <form asp-action="Bid" asp-controller="Home">
+                <form asp-action="Create" asp-controller="Bid">
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                     <div class="form-group">
                         <label asp-for="Id" class="control-label"></label>
