--- a/Lancer/Views/Home/Business.cshtml
+++ b/Lancer/Views/Home/Business.cshtml
@@ -17,7 +17,7 @@
                 </div>
             </div>
         </div>
-        <form asp-action="Business" asp-controller="Home">
+        <form asp-action="Create" asp-controller="Business">
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
         <div class="form-group">
             <label asp-for="Id" class="control-label"></label>
